--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,60 +1,61 @@
-name: CI/CD Pipeline with Security and Compliance
+name: CI/CD Pipeline with Security & Compliance
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - main  # Trigger pipeline when code is pushed to the 'main' branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the job
 
     steps:
-    - name: Checkout code
+    # Step 1: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
-    # Build Docker image
+    # Step 2: Set up Docker Buildx (to build multi-platform images)
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    # Step 3: Log in to DockerHub
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}  # Store DockerHub username in GitHub Secrets
+        password: ${{ secrets.DOCKER_PASSWORD }}  # Store DockerHub password in GitHub Secrets
+
+    # Step 4: Build Docker image
     - name: Build Docker image
       run: |
-        docker build -t myapp:latest .
+        docker build -t myapp:$GITHUB_SHA .
+        docker tag myapp:$GITHUB_SHA mydockerhub/myapp:$GITHUB_SHA
+        docker push mydockerhub/myapp:$GITHUB_SHA  # Push image to Docker Hub
 
-    # Static Analysis (SAST)
-    - name: Run SAST (SonarQube)
+
+
+    # Step 6: Run Container Vulnerability Scanning (Trivy)
+    - name: Run Trivy container scan
       run: |
-        docker run -e SONAR_TOKEN=${{ secrets.SONAR_TOKEN }} sonarsource/sonar-scanner-cli
+        trivy image mydockerhub/myapp:$GITHUB_SHA
 
-    # Container Image Vulnerability Scanning (Trivy)
-    - name: Scan Docker Image for Vulnerabilities
+    # Step 7: Set up AWS CLI (to interact with AWS services)
+    - name: Set up AWS CLI
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    # Step 8: Set up Kubernetes CLI (kubectl) for EKS
+    - name: Set up kubectl
+      uses: aws-actions/amazon-eks-kubeconfig-action@v1
+      with:
+        cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}  # EKS Cluster Name (stored in Secrets)
+        region: ${{ secrets.AWS_REGION }}             # AWS Region (stored in Secrets)
+
+    # Step 9: Helm Deploy to Kubernetes on EKS
+    - name: Helm Deploy to Kubernetes
       run: |
-        trivy image myapp:latest
-
-    # Deploy application to Kubernetes using Helm
-    - name: Deploy to Kubernetes
-      run: |
-        helm upgrade --install myapp ./chart --set image.tag=latest
-
-  security:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Install OWASP ZAP
-      run: |
-        apt-get update
-        apt-get install -y zaproxy
-
-    # DAST scan with OWASP ZAP
-    - name: Run DAST with OWASP ZAP
-      run: |
-        zap-baseline.py -t http://myapp:8080
-
-  compliance:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Check AWS Security Hub Compliance
-      run: |
-        aws securityhub describe-standards --region us-west-2
+        helm upgrade --install myapp ./helm-chart --set image.tag=$GITHUB_SHA
 
