--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,7 @@ jobs:
 
     # Step 8: Set up kubectl for EKS
     - name: Set up kubectl
-      uses: aws-actions/amazon-eks-kubeconfig-action@v1.0.0  # Ensure this is the correct version
+      uses: aws-actions/amazon-eks-kubeconfig-action@v1  # Use the stable v1 version of the action
       with:
         cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}  # EKS Cluster Name (stored in Secrets)
         region: ${{ secrets.AWS_REGION }}             # AWS Region (stored in Secrets)
