--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,7 +33,7 @@ jobs:
         docker push mydockerhub/myapp:$GITHUB_SHA  # Push image to Docker Hub
 
     # Step 5: Run Static Application Security Testing (SAST) - Example with SonarQube
-
+    # You can enable SAST here if you need
 
     # Step 6: Run Container Vulnerability Scanning (Trivy)
     - name: Run Trivy container scan
@@ -50,7 +50,7 @@ jobs:
 
     # Step 8: Set up kubectl for EKS
     - name: Set up kubectl
-      uses: aws-actions/amazon-eks-kubeconfig-action@v1.1.0  # Use the stable v1 version of the action
+      uses: aws-actions/amazon-eks-kubeconfig-action@v1  # Change to v1 (stable version)
       with:
         cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}  # EKS Cluster Name (stored in Secrets)
         region: ${{ secrets.AWS_REGION }}             # AWS Region (stored in Secrets)
