--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,7 +55,7 @@ jobs:
 
     # Step 8: Set up kubectl for EKS
     - name: Set up kubectl
-      uses: aws-actions/amazon-eks-kubeconfig-action@v1  # Change to v1 (stable version)
+      uses: aws-actions/amazon-eks-kubeconfig-action@latest # Change to v1 (stable version)
       with:
         cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}  # EKS Cluster Name (stored in Secrets)
         region: ${{ secrets.AWS_REGION }}             # AWS Region (stored in Secrets)
