--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,10 @@ jobs:
     - name: Install Trivy
       run: |
         curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/master/contrib/install.sh | sh
+        # Add trivy to PATH
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
+        # Verify Trivy installation
+        trivy --version
 
     # Step 5: Build Docker image
     - name: Build Docker image
