--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
       - main  # Trigger pipeline when code is pushed to the 'main' branch
 
 jobs:
-  build:
+  build_and_scan:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the job
 
     steps:
@@ -41,37 +41,40 @@ jobs:
         docker tag myapp:$GITHUB_SHA rtx3osie/myapp:$GITHUB_SHA
         docker push rtx3osie/myapp:$GITHUB_SHA  # Push image to Docker Hub
 
-    # Step 6: Run Static Application Security Testing (SAST) - Example with SonarQube
-    # You can enable SAST here if you need
-
-    # Step 7: Run Container Vulnerability Scanning (Trivy)
+    # Step 6: Run Container Vulnerability Scanning (Trivy) if environment is 'prod'
     - name: Run Trivy container scan
-      run: |
-        trivy image rtx3osie/myapp:$GITHUB_SHA
+      if: ${{ github.ref == 'refs/heads/main' }}  # You can modify this condition based on your environment logic
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: "rtx3osie/myapp:${{ github.sha }}"  # Use the correct image tag
+        format: "table"
+        exit-code: 1  # Fail the job if vulnerabilities are found
+        ignore-unfixed: true
+        severity: "CRITICAL,HIGH"
 
-    # Step 8: Set up AWS CLI (to interact with AWS services)
+    # Step 7: Set up AWS CLI (to interact with AWS services)
     - name: Set up AWS CLI
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-        
-    # Step 9: Install kubectl
+
+    # Step 8: Install kubectl
     - name: Install kubectl
       uses: azure/setup-kubectl@v2.0
       with:
         version: 'v1.24.0' # default is latest stable
       id: install
 
-    # Step 10: Set up kubectl for EKS
+    # Step 9: Set up kubectl for EKS
     - name: Set up kubectl
       uses: azure/k8s-set-context@v1 # Change to v1 (stable version)
       with:
         cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}  # EKS Cluster Name (stored in Secrets)
         region: ${{ secrets.AWS_REGION }}             # AWS Region (stored in Secrets)
 
-    # Step 11: Helm Deploy to Kubernetes on EKS
+    # Step 10: Helm Deploy to Kubernetes on EKS
     - name: Helm Deploy to Kubernetes
       run: |
         helm upgrade --install myapp ./helm-chart --set image.tag=$GITHUB_SHA
