--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    # Step 3: Log in to DockerHub
+    # Step 3: Log in to DockerHubs
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
